--- a/index.html
+++ b/index.html
@@ -37,6 +37,46 @@
               </div>
             </div>
           </nav>
+
+          <!-- slider  -->
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./images/banner.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Premium Event Venue</h5>
+                  <p>Blackrose Convention Centre has a variety of spacious rooms perfectly customizable to fit your event needs. We proudly provide the perfect environment for any event at our leading events facility here.</p>
+                </div>
+              </div>
+              <div class="carousel-item h-25">
+                <img src="./images/banner-1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Event Coordination</h5>
+                  <p>Whether your wedding is classic and traditional, or a little more contemporary, our exceptional facilities can be arranged to create an intimate, elegant setting for any number of guests.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./images/banner-2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Impeccable Food Quality</h5>
+                  <p>You can always rely our professional and courteous staff to deliver you a special memory. We are a full-service, Custom-to-the-client caterer that Personalizes every party reception.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </header>
     
 
