--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
               </div>
             </div>
           </nav>
+        </header>
 
+        <main>
           <!-- slider  -->
           <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -51,13 +53,15 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Premium Event Venue</h5>
                   <p>Blackrose Convention Centre has a variety of spacious rooms perfectly customizable to fit your event needs. We proudly provide the perfect environment for any event at our leading events facility here.</p>
+                  <button type="button" class="btn btn-light mb-5">Book Now</button>
                 </div>
               </div>
-              <div class="carousel-item h-25">
+              <div class="carousel-item">
                 <img src="./images/banner-1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Event Coordination</h5>
                   <p>Whether your wedding is classic and traditional, or a little more contemporary, our exceptional facilities can be arranged to create an intimate, elegant setting for any number of guests.</p>
+                  <button type="button" class="btn btn-light mb-5">Book Now</button>
                 </div>
               </div>
               <div class="carousel-item">
@@ -65,6 +69,7 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Impeccable Food Quality</h5>
                   <p>You can always rely our professional and courteous staff to deliver you a special memory. We are a full-service, Custom-to-the-client caterer that Personalizes every party reception.</p>
+                  <button type="button" class="btn btn-light mb-5">Book Now</button>
                 </div>
               </div>
             </div>
@@ -77,7 +82,47 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-    </header>
+
+          <!-- packages  -->
+          <div class="row row-cols-1 row-cols-md-4 g-4">
+  <div class="col">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+</div>
+</main>
     
 
 
