--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="container">
           <div class="toast fade show bg-info" id="myToast">
             <div class="toast-header">
-                <strong><i class="bi-gift-fill"></i> 20% OFF! &nbsp;</strong>
+                <strong><i class="bi-gift-fill"></i><i class="fas fa-gift text-dark"></i> 20% OFF! &nbsp;</strong>
                 <small class="me-auto">On next booking</small>
                 <a href="#packages">Click here!</a>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
